{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "c604546b-5775-443b-b455-d052abe2eb43",
            "actions": [
                {
                    "name": "Rock",
                    "type": "Button",
                    "id": "b51b3695-5f04-4475-9e86-86736b879d2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Paper",
                    "type": "Button",
                    "id": "b898c5e8-fd28-4430-90f6-aa62d84403e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scissors",
                    "type": "Button",
                    "id": "4de9f758-cddd-4f5d-a060-40d284ab203e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "36e671d1-181f-4583-91f8-f62bf4bb82af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2e67ad31-c7cf-4168-8bef-91a290f1cd05",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834ec0e5-b86c-4eee-86c2-f9a8d59e7137",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a60dbc4d-613b-4310-805f-2346737cca05",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3f2b4c2-4110-4cf5-a343-ee306acb6350",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "c07105d0-888e-425d-ae23-e61e9f171600",
            "actions": [
                {
                    "name": "Rock",
                    "type": "Button",
                    "id": "d7b3707c-6679-4ffe-b821-e87e0ba3fef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Paper",
                    "type": "Button",
                    "id": "b2ccc59c-83cf-4e14-86c6-57b26891182a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scissors",
                    "type": "Button",
                    "id": "0003426b-4e72-48c7-be08-48477ac63473",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "11781ad5-05e0-4276-9c09-8419a9141f35",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9df91c3f-69ca-4857-81a4-0bd1563005c2",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scissors",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87e47972-393a-497d-a1ac-6fdce9658485",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paper",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}